init/templates/Ec2Cfn.yaml
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.

Resources:
  MultiWpDeploymentSshSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      GroupName: MultiWpDeploymentSshSg
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22

  MultiWpDeploymentServerSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and HTTPS
      GroupName: MultiWpDeploymentServerSg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0

  MultiWpDeploymentEip:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref MultiWpDeploymentEc2

  MultiWpDeploymentEc2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Sub "resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64"
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !GetAtt MultiWpDeploymentSshSg.GroupId
        - !GetAtt MultiWpDeploymentServerSg.GroupId
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 30

Outputs:
  MultiWpDeploymentEip:
    Description: The Elastic IP address
    Value: !Ref MultiWpDeploymentEip
    Export:
      Name: MultiWpDeploymentEip
